Hover на карточке

--- a/index.html
+++ b/index.html
@@ -178,59 +178,118 @@
 
       <div class="catalog">
         <h2>Каталог</h2>
-        <div class="catalog_boks">
-          <div class="catalog_card">
-            <div class="catalog_img">
-              <img
-                src="./images/catalog/phone.png"
-                alt="Smartphone"
-                height="80px"
-              />
+        <div class="catalog_boks_phone">
+          <div class="catalog_boks">
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img
+                  src="./images/catalog/phone.png"
+                  alt="Smartphone"
+                  height="80px"
+                />
+              </div>
+              <p>Смартфоны</p>
             </div>
-            <p>Смартфоны</p>
-          </div>
 
-          <div class="catalog_card">
-            <div class="catalog_img">
-              <img
-                src="./images/catalog/kolonka.png"
-                alt="Smart speaker"
-                height="80px"
-              />
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img
+                  src="./images/catalog/kolonka.png"
+                  alt="Smart speaker"
+                  height="80px"
+                />
+              </div>
+              <p>Колонки</p>
             </div>
-            <p>Колонки</p>
-          </div>
 
-          <div class="catalog_card">
-            <div class="catalog_img">
-              <img
-                src="./images/catalog/display.png"
-                alt="Display"
-                height="80px"
-              />
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img
+                  src="./images/catalog/display.png"
+                  alt="Display"
+                  height="80px"
+                />
+              </div>
+              <p>Компьютеры</p>
             </div>
-            <p>Компьютеры</p>
-          </div>
-          <div class="catalog_card">
-            <div class="catalog_img">
-              <img
-                src="./images/catalog/phone.png"
-                alt="Smartwatch"
-                height="80px"
-              />
-            </div>
-            <p>Смарт-часы</p>
-          </div>
 
-          <div class="catalog_card">
-            <div class="catalog_img">
-              <img
-                src="./images/catalog/display.png"
-                alt="Tablet"
-                height="80px"
-              />
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img
+                  src="./images/catalog/phone.png"
+                  alt="Smartwatch"
+                  height="80px"
+                />
+              </div>
+              <p>Смарт-часы</p>
             </div>
-            <p>Планшеты</p>
+
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img
+                  src="./images/catalog/display.png"
+                  alt="Tablet"
+                  height="80px"
+                />
+              </div>
+              <p>Планшеты</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="catalog_boks_desktop">
+          <div class="catalog_boks">
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img
+                  src="./images/catalog/phone_desktop.png"
+                  alt="Smartphone"
+                />
+              </div>
+              <p>Смартфоны</p>
+            </div>
+
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img src="./images/catalog/laptop_desktop.png" alt="Laptop" />
+              </div>
+              <p>Ноутбуки</p>
+            </div>
+
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img src="./images/catalog/display_desktop.png" alt="Display" />
+              </div>
+              <p>Компьютеры</p>
+            </div>
+
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img src="./images/catalog/TV_desktop.png" alt="TV" />
+              </div>
+              <p>Телевизоры</p>
+            </div>
+
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img src="./images/catalog/tablet_desktop.png" alt="Tablet" />
+              </div>
+              <p>Планшеты</p>
+            </div>
+
+            <div class="catalog_card">
+              <div class="catalog_img">
+                <img
+                  src="./images/catalog/kolonka_for_desktop.png"
+                  alt="kolonka"
+                />
+              </div>
+              <p>Колонки</p>
+            </div>
+
+            <div class="katalog_scroll">
+              <img src="./images/catalog/strelka_desktop.svg" alt="" />
+            </div>
           </div>
         </div>
       </div>
@@ -243,13 +302,26 @@
             <div class="ckidka">
               <p>- 4 %</p>
             </div>
-            <div class="akcion_card_pic">
-              <img
-                src="./images/akcion/phone_1.png"
-                alt="Smartphone"
-                width="114px"
-                height="158px"
-              />
+            <div class="akcion_card_pic_phone">
+              <div class="akcion_card_pic">
+                <img
+                  src="./images/akcion/phone_1.png"
+                  alt="Smartphone"
+                  width="114px"
+                  height="158px"
+                />
+              </div>
+            </div>
+
+            <div class="akcion_card_pic_desktop">
+              <div class="akcion_card_pic">
+                <img
+                  src="./images/akcion/phone_1_desktop.png"
+                  alt="Smartphone"
+                  width="170px"
+                  height="215px"
+                />
+              </div>
             </div>
 
             <div class="img_carusel">
@@ -324,13 +396,26 @@
             <div class="ckidka">
               <p>- 10 %</p>
             </div>
-            <div class="akcion_card_pic">
-              <img
-                src="./images/akcion/phone_2.png"
-                alt="iPhone"
-                width="114px"
-                height="158px"
-              />
+            <div class="akcion_card_pic_phone">
+              <div class="akcion_card_pic">
+                <img
+                  src="./images/akcion/phone_2.png"
+                  alt="iPhone"
+                  width="114px"
+                  height="158px"
+                />
+              </div>
+            </div>
+
+            <div class="akcion_card_pic_desktop">
+              <div class="akcion_card_pic">
+                <img
+                  src="./images/akcion/phone_2_desktop.png"
+                  alt="Smartphone"
+                  width="170px"
+                  height="215px"
+                />
+              </div>
             </div>
 
             <div class="img_carusel">
@@ -406,13 +491,281 @@
             <div class="ckidka">
               <p>- 10 %</p>
             </div>
-            <div class="akcion_card_pic">
-              <img
-                src="./images/akcion/phone_1.png"
-                alt="Smartphone"
-                width="114px"
-                height="158px"
-              />
+            <div class="akcion_card_pic_phone">
+              <div class="akcion_card_pic">
+                <img
+                  src="./images/akcion/phone_1.png"
+                  alt="Smartphone"
+                  width="114px"
+                  height="158px"
+                />
+              </div>
+            </div>
+
+            <div class="akcion_card">
+              <div class="ckidka">
+                <p>- 10 %</p>
+              </div>
+              <div class="akcion_card_pic_desktop">
+                <div class="akcion_card_pic">
+                  <img
+                    src="./images/akcion/phone_3_desktop.png"
+                    alt="Smartphone"
+                    width="170px"
+                    height="215px"
+                  />
+                </div>
+              </div>
+
+              <div class="img_carusel">
+                <svg
+                  width="12"
+                  height="12"
+                  viewBox="0 0 12 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect
+                    x="0.5"
+                    y="0.5"
+                    width="11"
+                    height="11"
+                    rx="5.5"
+                    stroke="#C1C1C1"
+                  />
+                </svg>
+
+                <svg
+                  width="12"
+                  height="12"
+                  viewBox="0 0 12 12"
+                  fill="#091D9E"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect
+                    x="0.5"
+                    y="0.5"
+                    width="11"
+                    height="11"
+                    rx="5.5"
+                    stroke="#091D9E"
+                  />
+                </svg>
+
+                <svg
+                  width="12"
+                  height="12"
+                  viewBox="0 0 12 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect
+                    x="0.5"
+                    y="0.5"
+                    width="11"
+                    height="11"
+                    rx="5.5"
+                    stroke="#C1C1C1"
+                  />
+                </svg>
+              </div>
+
+              <p class="descr">Смартфон Apple iPhone 12 64GB</p>
+
+              <div class="price_boks">
+                <p class="price">42 980 грн</p>
+                <p class="full_price">
+                  <del>47 756 грн</del>
+                </p>
+              </div>
+
+              <p class="statys">В наличии</p>
+
+              <div class="button">
+                <p>В корзину</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="akcion_card">
+            <div class="ckidka">
+              <p>- 10 %</p>
+            </div>
+            <div class="akcion_card_pic_desktop">
+              <div class="akcion_card_pic">
+                <img
+                  src="./images/akcion/phone_4_desktop.png"
+                  alt="Smartphone"
+                  width="170px"
+                  height="215px"
+                />
+              </div>
+            </div>
+
+            <div class="img_carusel">
+              <svg
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <rect
+                  x="0.5"
+                  y="0.5"
+                  width="11"
+                  height="11"
+                  rx="5.5"
+                  stroke="#C1C1C1"
+                />
+              </svg>
+
+              <svg
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="#091D9E"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <rect
+                  x="0.5"
+                  y="0.5"
+                  width="11"
+                  height="11"
+                  rx="5.5"
+                  stroke="#091D9E"
+                />
+              </svg>
+
+              <svg
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <rect
+                  x="0.5"
+                  y="0.5"
+                  width="11"
+                  height="11"
+                  rx="5.5"
+                  stroke="#C1C1C1"
+                />
+              </svg>
+            </div>
+
+            <p class="descr">Смартфон Apple iPhone 12 64GB</p>
+
+            <div class="price_boks">
+              <p class="price">42 980 грн</p>
+              <p class="full_price">
+                <del>47 756 грн</del>
+              </p>
+            </div>
+
+            <p class="statys">В наличии</p>
+
+            <div class="button">
+              <p>В корзину</p>
+            </div>
+          </div>
+
+          <div class="akcion_card">
+            <div class="ckidka">
+              <p>- 10 %</p>
+            </div>
+            <div class="akcion_card_pic_desktop">
+              <div class="akcion_card_pic">
+                <img
+                  src="./images/akcion/phone_5_desktop.png"
+                  alt="Smartphone"
+                  width="170px"
+                  height="215px"
+                />
+              </div>
+            </div>
+
+            <div class="img_carusel">
+              <svg
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <rect
+                  x="0.5"
+                  y="0.5"
+                  width="11"
+                  height="11"
+                  rx="5.5"
+                  stroke="#C1C1C1"
+                />
+              </svg>
+
+              <svg
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="#091D9E"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <rect
+                  x="0.5"
+                  y="0.5"
+                  width="11"
+                  height="11"
+                  rx="5.5"
+                  stroke="#091D9E"
+                />
+              </svg>
+
+              <svg
+                width="12"
+                height="12"
+                viewBox="0 0 12 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <rect
+                  x="0.5"
+                  y="0.5"
+                  width="11"
+                  height="11"
+                  rx="5.5"
+                  stroke="#C1C1C1"
+                />
+              </svg>
+            </div>
+
+            <p class="descr">Смартфон Apple iPhone 12 64GB</p>
+
+            <div class="price_boks">
+              <p class="price">42 980 грн</p>
+              <p class="full_price">
+                <del>47 756 грн</del>
+              </p>
+            </div>
+
+            <p class="statys">В наличии</p>
+
+            <div class="button">
+              <p>В корзину</p>
+            </div>
+          </div>
+
+          <div class="akcion_card">
+            <div class="ckidka">
+              <p>- 10 %</p>
+            </div>
+            <div class="akcion_card_pic_desktop">
+              <div class="akcion_card_pic">
+                <img
+                  src="./images/akcion/phone_6_desktop.png"
+                  alt="Smartphone"
+                />
+              </div>
             </div>
 
             <div class="img_carusel">
